deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: round-trip-backend
  labels:
    app.kubernetes.io/name: round-trip-backend
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: round-trip-backend
  ports:
    - name: http
      port: 80
      targetPort: http
